--- a/WorkDemo/IJson_Http/IJson_Http.csproj
+++ b/WorkDemo/IJson_Http/IJson_Http.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="全球智联平台服务接口协议2.1.doc" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
