--- a/WorkDemo/XMLRequest/IXml_Http.csproj
+++ b/WorkDemo/XMLRequest/IXml_Http.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="江苏移动物联网能力开放接口协议V1 0 5 1（发布版）.docx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
