--- a/WorkDemo/IJson_Http_Post/IJson_Http_Post.csproj
+++ b/WorkDemo/IJson_Http_Post/IJson_Http_Post.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="公田接口文档.pdf" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="dll\NRails.Core.dll" />
