--- a/WorkDemo/WebApi查询接口/packages.config
+++ b/WorkDemo/WebApi查询接口/packages.config
@@ -17,5 +17,10 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.zh-Hans" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
+  <package id="Swagger-Net" version="8.3.7.2" targetFramework="net45" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net45" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
