--- a/WorkDemo/WebApiCRUD_Mongodb接口/WebApiCRUD_Mongodb接口.csproj
+++ b/WorkDemo/WebApiCRUD_Mongodb接口/WebApiCRUD_Mongodb接口.csproj
@@ -163,6 +163,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\VehicleItem.cs" />
+    <Compile Include="Models\Wechat.cs" />
+    <Compile Include="Models\WxInfo.cs" />
+    <Compile Include="Models\WxItem.cs" />
+    <Compile Include="Models\WxOItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
