--- a/WorkDemo/IJson_Http_Post_小米/packages.config
+++ b/WorkDemo/IJson_Http_Post_小米/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net452" />
+  <package id="IKVM" version="8.1.5717.0" targetFramework="net452" />
+  <package id="NLog" version="4.4.12" targetFramework="net452" />
 </packages>
