--- a/WorkDemo/WebApi查询接口/WebApi查询接口.csproj
+++ b/WorkDemo/WebApi查询接口/WebApi查询接口.csproj
@@ -136,11 +136,14 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\FJTelNoticeInfoController.cs" />
+    <Compile Include="Controllers\XmMobileNoticeInfoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\FJTelNoticeInfoItem.cs" />
     <Compile Include="Models\NoticeInfoItem.cs" />
+    <Compile Include="Models\XmMobileInfoItem.cs" />
+    <Compile Include="Models\XmResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
