--- a/WorkDemo/IJson_Http_Post/IJson_Http_Post(公田接口文档).csproj
+++ b/WorkDemo/IJson_Http_Post/IJson_Http_Post(公田接口文档).csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{01540D97-0CC3-4444-836D-BB58F38A262D}</ProjectGuid>
+    <ProjectGuid>{640988D2-DD70-4B9A-B7C0-C0124D3C3D14}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IForm_Http_Post</RootNamespace>
-    <AssemblyName>IForm_Http_Post</AssemblyName>
+    <RootNamespace>IJson_Http_Post</RootNamespace>
+    <AssemblyName>IJson_Http_Post</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -36,6 +36,10 @@
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NRails.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>dll\NRails.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,14 +50,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FjTelComRescs.cs" />
+    <Compile Include="CardRealTimeInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="福建电信接口文档.doc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dll\NRails.Core.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
