--- a/WorkDemo/WebApiCRUD_Mongodb接口/packages.config
+++ b/WorkDemo/WebApiCRUD_Mongodb接口/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.42" targetFramework="net45" />
+  <package id="Dapper.Extension" version="1.0.0.1" targetFramework="net45" />
   <package id="DnsClient" version="1.0.7" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net45" />
@@ -22,6 +24,7 @@
   <package id="MongoDB.Bson" version="2.5.0" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.5.0" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.5.0" targetFramework="net45" />
+  <package id="MySql.Data" version="6.10.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="Swagger-Net" version="8.3.8.1" targetFramework="net45" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net45" />
@@ -29,4 +32,5 @@
   <package id="System.Buffers" version="4.3.0" targetFramework="net45" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
+  <package id="Z.Dapper.Plus" version="1.3.14" targetFramework="net45" />
 </packages>
