--- a/WorkDemo/WebApi查询接口/packages.config
+++ b/WorkDemo/WebApi查询接口/packages.config
@@ -19,6 +19,7 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
+  <package id="NLog" version="4.5.2" targetFramework="net45" />
   <package id="Swagger-Net" version="8.3.7.2" targetFramework="net45" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net45" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net45" />
